RESOLVED FIXED 285545
Fix <input type=file> painting in sideways-lr writing mode
https://bugs.webkit.org/show_bug.cgi?id=285545
Summary Fix <input type=file> painting in sideways-lr writing mode
Tim Nguyen (:ntim)
Reported 2025-01-07 11:06:43 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-07 11:25:34 PST
Tim Nguyen (:ntim)
Comment 2 2025-01-07 11:28:08 PST
Tim Nguyen (:ntim)
Comment 3 2025-01-07 11:30:34 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/49961
EWS
Comment 4 2025-01-07 15:55:30 PST
Committed 288569@main (9055c855d8be): <https://commits.webkit.org/288569@main> Reviewed commits have been landed. Closing PR #38667 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.