Fix <input type=file> painting in sideways-lr writing mode https://bugs.webkit.org/show_bug.cgi?id=285545 rdar://142491598

Reviewed by Alan Baradlay.

Perform the necessary translations to position the text and icon properly when painting `<input type=file>`.

* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/forms/file-input-computed-style-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/forms/file-input-computed-style.html:
* Source/WebCore/rendering/RenderFileUploadControl.cpp:
(WebCore::RenderFileUploadControl::paintControl):

Canonical link: https://commits.webkit.org/288569@main